Configure 'govuk-frontend' library

--- a/app/views/status/index.html.erb
+++ b/app/views/status/index.html.erb
@@ -2,4 +2,5 @@
 <div>
   <p class="status"><%= @status['status'] %></p>
   <p class="postgres_version"><%= @status['postgresVersion'] %></p>
+  <button class="govuk-button">This is a button component</button>
 </div>
