--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
 <body class="govuk-template__body js-enabled">
   <%= render '/layouts/header' %>
+  <%= render '/layouts/phase_banner' %>
 
   <div class="govuk-width-container govuk-!-margin-bottom-9">
     <%= yield %>
