--- a/app/views/status/index.html.erb
+++ b/app/views/status/index.html.erb
@@ -1,5 +1,13 @@
-<h1 class="govuk-heading-l govuk-!-margin-top-9">Offender Management Allocation API Status</h1>
-<div>
-  <p class="status govuk-body"><strong>API health:</strong> <%= @status['status'] %></p>
-  <p class="postgres_version govuk-body"><strong>Postgres version:</strong> <%= @status['postgresVersion'] %></p>
+<div class='govuk-grid-row'>
+  <div class='govuk-grid-column-full govuk-!-margin-top-9 govuk-!-margin-bottom-9'>
+    <h2 class="govuk-heading-xl">Offender Management Allocation API Status</h2>
+    <div class='govuk-!-margin-bottom-9'>
+      <p class="status govuk-body"><strong>API health:</strong> <%= @status['status'] %></p>
+      <p class="postgres_version govuk-body"><strong>Postgres version:</strong> <%= @status['postgresVersion'] %></p>
+    </div>
+  </div>
 </div>
+<div style='height: 100px;'>
+</div>
+
+
