Authenticate a user before visiting the status end point

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,8 @@
     </a>
     <ul id="navigation" class="hmpps-header__navigation" aria-label="Top Level Navigation">
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-        <a href='/login' class='govuk-header__link govuk-!-font-size-16'>Login</a>
+        <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>HMP Cardiff  |</span>
+        <a href='#' class='govuk-header__link govuk-!-font-size-16'><%= current_user %></a>
       </li>
     </ul>
   </div>
