--- a/app/assets/stylesheets/hmpps_header.scss
+++ b/app/assets/stylesheets/hmpps_header.scss
@@ -12,7 +12,7 @@
   height: 30px;
   margin-bottom: -2px;
   margin-right: 10px;
-}
+}s
 
 .hmpps-header__inner {
   border-bottom: 10px solid govuk-colour("blue");
@@ -25,6 +25,6 @@
 }
 
 .hmpss-header__prison-identifier {
-  color: govuk-colour("white");
+  color: #fff;
   font-weight: bold;
 }
