[MOICM-67] - Get prisoner information by location
- remove hard-coded data in the AllocationsController
- temporarily adjust views to pull in Custody API response data
- update spec helpers

--- a/app/views/allocations/_awaiting_tiering.html.erb
+++ b/app/views/allocations/_awaiting_tiering.html.erb
@@ -15,10 +15,10 @@
     <tbody class="govuk-table__body">
     <% @prisoners.each do |prisoner| %>
       <tr class="govuk-table__row">
-        <td aria-label="Action" class="govuk-table__cell "><%= prisoner[:name] %></a></td>
-        <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner[:number] %></td>
-        <td aria-label="Arrival date" class="govuk-table__cell "><%= prisoner[:arrival_date] %></td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= prisoner[:release_date] %></td>
+        <td aria-label="Action" class="govuk-table__cell "><%= prisoner['surname'] %></a></td>
+        <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner['nomsId'] %></td>
+        <td aria-label="Arrival date" class="govuk-table__cell ">NA</td>
+        <td aria-label="Release date" class="govuk-table__cell ">NA</td>
         <td aria-label="Action" class="govuk-table__cell "><a
           href="#">View</a></td>
       </tr>
