--- a/app/views/allocations/_awaiting_tiering.html.erb
+++ b/app/views/allocations/_awaiting_tiering.html.erb
@@ -3,12 +3,12 @@
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col"><a href='#'
-                                                     class='table-sorter__link'>Prisoner name</th>
+                                                     class='table-sorter__link'>Prisoner name</a></th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
       <th class="govuk-table__header" scope="col"><a href='#'
-                                                     class='table-sorter__link'>Arrival date</th>
+                                                     class='table-sorter__link'>Arrival date</a></th>
       <th class="govuk-table__header" scope="col"><a href='#'
-                                                     class='table-sorter__link'>Release date</th>
+                                                     class='table-sorter__link'>Release date</a></th>
       <th class="govuk-table__header sorter-false" scope="col">Action</th>
     </tr>
     </thead>
