--- a/app/views/allocations/_allocated.html.erb
+++ b/app/views/allocations/_allocated.html.erb
@@ -19,11 +19,11 @@
     <tbody class="govuk-table__body">
     <% @prisoners.each do |prisoner| %>
       <tr class="govuk-table__row">
-        <td aria-label="Prisoner name" class="govuk-table__cell "><%= prisoner[:name] %></td>
-        <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner[:number] %></td>
+        <td aria-label="Prisoner name" class="govuk-table__cell "><%= prisoner.first_name %></td>
+        <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner.noms_id %></td>
         <td aria-label="Arrival date" class="govuk-table__cell
-              "><%= prisoner[:arrival_date] %></td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= prisoner[:release_date] %></td>
+              ">N/A</td>
+        <td aria-label="Release date" class="govuk-table__cell ">N/A</td>
         <td aria-label="Tier" class="govuk-table__cell ">NA</td>
         <td aria-label="POM" class="govuk-table__cell">NA</td>
         <td aria-label="Allocation date" class="govuk-table__cell">NA</td>
