[MOIC-52] Add Allocate Prison Offender Manager
Adds a basic show and edit page for allocating a Prison Offender
Manager.  These pages contain no data and the links do not work; the page
will be updated as work progresses on the backend.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+@import "tables";
 
  .no-bottom-margin {
      margin-bottom: 0;
@@ -21,7 +22,7 @@
 
  .dashboard-row {
      margin-top: 20px;
-     
+
      .wrapper {
         min-height: 130px;
         background-color: #f9f9f9;
@@ -35,6 +36,3 @@
         padding: 8px;
     }
  }
-
-
-
