--- a/app/views/layouts/_phase_banner.html.erb
+++ b/app/views/layouts/_phase_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-phase-banner govuk-width-container app-site-
 width-container">
   <p class="govuk-phase-banner__content">
-    <strong class="govuk-tag hmpps-tag__alpha govuk-phase-banner__content__tag ">alpha</strong>
+    <strong class="govuk-tag hmpps-tag__beta govuk-phase-banner__content__tag ">beta</strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
