Adds the link to POM management into the dashboard

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -64,7 +64,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "Active POMs", "/", class:"govuk-link" %>
+        <%= link_to "Active POMs", poms_path(), class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Active and inactive Prison Offender Managers at this prison.</p>
     </div>
