[MOIC-83] - Sign out a user
- Add 'sign out' link to navigation
- When a user clicks 'sign out' their application session is destroyed
and they are signed out of Nomis OAuth2 SSO
- The user will then be redirected to the Nomis OAuth2 SSO sign in page.
Upon successful authentication the user will be redirected back to the
root path

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,9 @@
         <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>HMP Cardiff  |</span>
         <a href='#' class='govuk-header__link govuk-!-font-size-16'><%= current_user %></a>
       </li>
+      <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
+        <%= link_to 'Sign out', signout_path  %>
+      </li>
     </ul>
   </div>
 </header>
