--- a/app/views/allocate_prison_offender_managers/edit.html.erb
+++ b/app/views/allocate_prison_offender_managers/edit.html.erb
@@ -1,4 +1,4 @@
-<a href="#" class="govuk-back-link govuk-!-margin-bottom-6">Back</a>
+<a href="<%= allocations_path() %>" class="govuk-back-link govuk-!-margin-bottom-6">Back</a>
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
 
