--- a/app/views/allocations/_awaiting_allocation.html.erb
+++ b/app/views/allocations/_awaiting_allocation.html.erb
@@ -20,7 +20,7 @@
         <td aria-label="Arrival date" class="govuk-table__cell ">N/A</td>
         <td aria-label="Release date" class="govuk-table__cell ">N/A</td>
         <td aria-label="Tier" class="govuk-table__cell ">NA</td>
-        <td aria-label="Action" class="govuk-table__cell "><a href="#">Allocate</a></td>
+        <td aria-label="Action" class="govuk-table__cell "><a href="<%= allocate_prison_offender_managers_path() %>">Allocate</a></td>
       </tr>
     <% end %>
     </tbody>
