--- a/app/views/allocate_prison_offender_managers/show.html.erb
+++ b/app/views/allocate_prison_offender_managers/show.html.erb
@@ -1,4 +1,4 @@
-<a href="<%= allocations_path(anchor: "awaiting-allocation") %>" class="govuk-back-link govuk-!-margin-bottom-6">Back</a>
+<%= render :partial => "/shared/backlink", :locals => { :page => allocations_path(anchor: "awaiting-allocation") } %>
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
 
