--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
 
     <div class='govuk-width-container'>
       <main class='govuk-main-wrapper' id='main-content' role='main'>
+
+        <%= render '/shared/breadcrumbs' %>
+
         <%= yield %>
       </main>
     </div>
