--- a/app/views/allocations/allocated.html.erb
+++ b/app/views/allocations/allocated.html.erb
@@ -1,3 +1,6 @@
+<%= render 'title' %>
+<%= render 'tabs', active: :allocated %>
+
 <section class="govuk-tabs__panel" id="allocated">
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
@@ -19,7 +22,7 @@
     <tbody class="govuk-table__body">
     <% @prisoners.each do |prisoner| %>
       <tr class="govuk-table__row">
-        <td aria-label="Prisoner name" class="govuk-table__cell "><%= prisoner.first_name %></td>
+        <td aria-label="Prisoner name" class="govuk-table__cell "><%= prisoner.surname %>, <%= prisoner.first_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner.noms_id %></td>
         <td aria-label="Arrival date" class="govuk-table__cell
               ">N/A</td>
