--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,8 @@
     </a>
     <ul id="navigation" class="hmpps-header__navigation" aria-label="Top Level Navigation">
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-        <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>HMP Cardiff  |</span>
-        <a href='#' class='govuk-header__link govuk-!-font-size-16'><%= current_user %></a>
+        <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>HMP Cardiff <span class="govuk-!-padding-left-1">|</span></span>
+        <a href='#' class='govuk-header__link govuk-!-font-size-16 govuk-!-padding-left-1'><%= current_user %></a>
       </li>
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
         <%= link_to 'Sign out', signout_path  %>
