--- a/app/views/allocate_prison_offender_managers/edit.html.erb
+++ b/app/views/allocate_prison_offender_managers/edit.html.erb
@@ -1,10 +1,20 @@
 <%= render :partial => "/shared/backlink", :locals => { :page => allocations_path() } %>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Reallocate a Prison Offender Manager</h1>
+
+<div class="govuk-warning-text">
+  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+  <strong class="govuk-warning-text__text">
+    <span class="govuk-warning-text__assistive">Warning</span>
+    You are about to reallocate this prisoner, is this necessary?
+  </strong>
+</div>
 
 <%= render 'allocate_prison_offender_managers/basic_prisoner_info' %>
 
 <%= render 'allocate_prison_offender_managers/current_pom_info' %>
+
+<%= render 'allocate_prison_offender_managers/offence_info' %>
 
 <%= render 'allocate_prison_offender_managers/case_information' %>
 
