Implement text alignment within pom and prisoner tables

--- a/app/views/allocate_prison_offender_managers/_case_information.html.erb
+++ b/app/views/allocate_prison_offender_managers/_case_information.html.erb
@@ -2,21 +2,21 @@
   <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
     <td class="govuk-table__header" scope="row">Case information</td>
-    <td class="govuk-table__cell table_cell__right_align"></td>
+    <td class="govuk-table__cell"></td>
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Current responsibility</td>
-    <td class="govuk-table__cell table_cell__right_align">Prison</td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Prison</td>
   </tr>
 
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Case allocation</td>
-    <td class="govuk-table__cell table_cell__right_align">National Probation Service (NPS)
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">National Probation Service (NPS)
     </td>
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Tiering calculation</td>
-    <td class="govuk-table__cell table_cell__right_align">
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
       <a href="#">Tier A</a></td>
   </tr>
   </tbody>
