--- a/app/views/allocate_prison_offender_managers/_current_pom_info.html.erb
+++ b/app/views/allocate_prison_offender_managers/_current_pom_info.html.erb
@@ -2,15 +2,15 @@
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__header" scope="row">Current POM</td>
-      <td class="govuk-table__cell table_cell__right_align"></td>
+      <td class="govuk-table__cell"></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Name</td>
-      <td class="govuk-table__cell table_cell__right_align">Green, Samantha</td>
+      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Green, Samantha</td>
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell hmpps-table-cell__key">Grade</td>
-        <td class="govuk-table__cell table_cell__right_align">Probation POM</td>
+        <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Probation POM</td>
       </tr>
     </tbody>
   </table>
