--- a/app/views/allocate_prison_offender_managers/_pom_tables.html.erb
+++ b/app/views/allocate_prison_offender_managers/_pom_tables.html.erb
@@ -21,16 +21,16 @@ Recommendation:
   </thead>
   <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
-        <td aria-label="POM name" class="govuk-table__cell ">Green, Samantha</td>
-        <td aria-label="Type" class="govuk-table__cell"></td>
-        <td aria-label="Tier A cases" class="govuk-table__cell table_cell__right_align">11</td>
-        <td aria-label="Tier B cases" class="govuk-table__cell table_cell__right_align">10</td>
-        <td aria-label="Tier C cases" class="govuk-table__cell table_cell__right_align">2</td>
-        <td aria-label="Tier D cases" class="govuk-table__cell table_cell__right_align">1</td>
-        <td aria-label="Total" class="govuk-table__cell table_cell__right_align">24</td>
-        <td aria-label="Working pattern" class="govuk-table__cell table_cell__right_align">Full time</td>
+        <td aria-label="POM name" class="govuk-table__cell table_cell__left_align poms-table-cell__key">Green, Samantha</td>
+        <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
+        <td aria-label="Tier A cases" class="govuk-table__cell table_cell__left_align">11</td>
+        <td aria-label="Tier B cases" class="govuk-table__cell table_cell__left_align">10</td>
+        <td aria-label="Tier C cases" class="govuk-table__cell table_cell__left_align">2</td>
+        <td aria-label="Tier D cases" class="govuk-table__cell table_cell__left_align">1</td>
+        <td aria-label="Total" class="govuk-table__cell table_cell__left_align">24</td>
+        <td aria-label="Working pattern" class="govuk-table__cell">Full time</td>
         <% if current_page?(action: 'show') %>
-          <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
+          <td aria-label="Action" class="govuk-table__cell table_cell__left_align"><a
                                 href="#">Allocate</a></td>
         <% else %>
           <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
@@ -70,14 +70,14 @@ Recommendation:
       </thead>
       <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td aria-label="POM name" class="govuk-table__cell table_cell__right_align">Penge, Frank</td>
-            <td aria-label="Type" class="govuk-table__cell"></td>
-            <td aria-label="Tier A cases" class="govuk-table__cell table_cell__right_align">0</td>
-            <td aria-label="Tier B cases" class="govuk-table__cell table_cell__right_align">0</td>
-            <td aria-label="Tier C cases" class="govuk-table__cell table_cell__right_align">13</td>
-            <td aria-label="Tier D cases" class="govuk-table__cell table_cell__right_align">15</td>
-            <td aria-label="Total" class="govuk-table__cell table_cell__right_align">28</td>
-            <td aria-label="Working pattern" class="govuk-table__cell table_cell__right_align">Full time</td>
+            <td aria-label="POM name" class="govuk-table__cell table_cell__left_align poms-table-cell__key">Penge, Frank</td>
+            <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
+            <td aria-label="Tier A cases" class="govuk-table__cell table_cell__left_align">0</td>
+            <td aria-label="Tier B cases" class="govuk-table__cell table_cell__left_align">0</td>
+            <td aria-label="Tier C cases" class="govuk-table__cell table_cell__left_align">13</td>
+            <td aria-label="Tier D cases" class="govuk-table__cell table_cell__left_align">15</td>
+            <td aria-label="Total" class="govuk-table__cell table_cell__left_align">28</td>
+            <td aria-label="Working pattern" class="govuk-table__cell">Full time</td>
             <% if current_page?(action: 'show') %>
               <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
                                     href="#">Allocate</a></td>
