--- a/app/views/allocate_prison_offender_managers/show.html.erb
+++ b/app/views/allocate_prison_offender_managers/show.html.erb
@@ -4,6 +4,8 @@
 
 <%= render 'allocate_prison_offender_managers/basic_prisoner_info' %>
 
+<%= render 'allocate_prison_offender_managers/offence_info' %>
+
 <%= render 'allocate_prison_offender_managers/case_information' %>
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible"></hr>
