--- a/app/views/allocate_prison_offender_managers/_basic_prisoner_info.html.erb
+++ b/app/views/allocate_prison_offender_managers/_basic_prisoner_info.html.erb
@@ -3,38 +3,20 @@
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__header" scope="row">Prisoner</td>
-      <td class="govuk-table__cell table_cell__right_align"></td>
+      <td class="govuk-table__cell"></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Name</td>
-      <td class="govuk-table__cell table_cell__right_align"><a
+      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><a
           href="#">Michael Scarn</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Number</td>
-      <td class="govuk-table__cell table_cell__right_align">AB1234C</td>
+      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">AB1234C</td>
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell hmpps-table-cell__key">Nationality</td>
-        <td class="govuk-table__cell table_cell__right_align">British</td>
+        <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">British</td>
       </tr>
     </tbody>
   </table>
-
-  <table class="govuk-table">
-    <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <td class="govuk-table__header" scope="row">Offence</td>
-      <td class="govuk-table__cell table_cell__right_align"></td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell hmpps-table-cell__key">Main Offence</td>
-      <td class="govuk-table__cell table_cell__right_align">Fraud</td>
-    </tr>
-    <tr class="govuk-table__row">
-        <td class="govuk-table__cell hmpps-table-cell__key">Nationality</td>
-        <td class="govuk-table__cell table_cell__right_align">British</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
