--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -3,7 +3,7 @@
     <ul class="links">
       <li>
         <% if @page_data.previous? %>
-          <a href="?page=<%= @page_data.current_page - 1 %>">&laquo; Previous</a>
+          <a href="<%= replace_param('page', @page_data.current_page - 1) %>">&laquo; Previous</a>
         <% else %>
           &laquo; Previous
         <% end %>
@@ -13,13 +13,13 @@
           <% if page_num == @page_data.current_page %>
             <%= page_num %>
           <% else %>
-            <a href="?page=<%= page_num %>"><%= page_num %></a>
+            <a href="<%= replace_param('page', page_num) %>"><%= page_num %></a>
           <% end %>
         </li>
       <% end %>
       <li>
         <% if @page_data.next? %>
-          <a href="?page=<%= @page_data.current_page + 1 %>">Next &raquo;</a>
+          <a href="<%= replace_param('page', @page_data.current_page + 1) %>">Next &raquo;</a>
         <% else %>
           Next &raquo;
         <% end %>
