Add prisoner info page
This page provides staff with an overview of the prisoner as part of
the tiering activity.  This PR covers the creation of the layout and
uses dummy data; the next iteration will be to make this page be able to
handle real data.

--- a/app/views/allocate_prison_offender_managers/edit.html.erb
+++ b/app/views/allocate_prison_offender_managers/edit.html.erb
@@ -10,11 +10,11 @@
   </strong>
 </div>
 
-<%= render 'allocate_prison_offender_managers/basic_prisoner_info' %>
+<%= render 'shared/basic_prisoner_info' %>
 
-<%= render 'allocate_prison_offender_managers/current_pom_info' %>
+<%= render 'shared/current_pom_info' %>
 
-<%= render 'allocate_prison_offender_managers/offence_info' %>
+<%= render 'shared/offence_info' %>
 
 <%= render 'allocate_prison_offender_managers/case_information' %>
 
