--- a/app/views/allocate_prison_offender_managers/show.html.erb
+++ b/app/views/allocate_prison_offender_managers/show.html.erb
@@ -2,9 +2,9 @@
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
 
-<%= render 'allocate_prison_offender_managers/basic_prisoner_info' %>
+<%= render 'shared/basic_prisoner_info' %>
 
-<%= render 'allocate_prison_offender_managers/offence_info' %>
+<%= render 'shared/offence_info' %>
 
 <%= render 'allocate_prison_offender_managers/case_information' %>
 
