--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -6,12 +6,11 @@
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Main Offence</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Fraud</td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">OFFENCE</td>
   </tr>
   <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Release date / parole eligibility</td>
-      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">21/08/2028</td>
+      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">RELEASE DATE</td>
     </tr>
   </tbody>
 </table>
-</div>
