--- a/app/views/shared/_basic_prisoner_info.html.erb
+++ b/app/views/shared/_basic_prisoner_info.html.erb
@@ -8,7 +8,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Name</td>
       <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><a
-          href="#">Michael Scarn</a></td>
+          href="<%= prisoners_show_path(1) %>">Michael Scarn</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Number</td>
