Fetch offender details
As part of the "allocate a POM" work flow we need to display information
related to the offender needing to be allocated.  The routes and views
have been updated to display the information returned.

We have created a NullOffenderDetails object to handle the offender not
being within NOMIS and we will need to establish how to handle this on
the frontend in a following iteration.

--- a/app/views/allocate_prison_offender_managers/_case_information.html.erb
+++ b/app/views/allocate_prison_offender_managers/_case_information.html.erb
@@ -6,18 +6,18 @@
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Current responsibility</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Prison</td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Need to get from somewhere!</td>
   </tr>
 
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Case allocation</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">National Probation Service (NPS)
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Need to get from somewhere!
     </td>
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Tiering calculation</td>
     <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
-      <a href="#">Tier A</a></td>
+      <a href="#">Need to get from somewhere!</a></td>
   </tr>
   </tbody>
 </table>
