--- a/app/views/allocations/allocated.html.erb
+++ b/app/views/allocations/allocated.html.erb
@@ -31,7 +31,7 @@
         <td aria-label="POM" class="govuk-table__cell">NA</td>
         <td aria-label="Allocation date" class="govuk-table__cell">NA</td>
         <td aria-label="Action" class="govuk-table__cell "><a
-          href="<%= edit_allocate_prison_offender_managers_path() %>">Reallocate</a></td>
+          href="<%= allocate_prison_offender_managers_edit_path(prisoner.noms_id) %>">Reallocate</a></td>
       </tr>
     <% end %>
     </tbody>
