--- a/app/views/prisoners/show.html.erb
+++ b/app/views/prisoners/show.html.erb
@@ -83,9 +83,9 @@
   <section class="govuk-tabs__panel govuk-tabs__panel--hidden"
            id="prisoner-info">
     <div>
-      <%= render 'shared/offence_info' %>
-      <%= render 'prisoners/case_information' %>
-      <%= render 'prisoners/allocation_info' %>
+      <%# <%= render 'shared/offence_info' %> %>
+      <%# <%= render 'prisoners/case_information' %> %>
+      <%# <%= render 'prisoners/allocation_info' %> %>
     </div>
   </section>
 
