Do not render pagination view when there is no page data
Rather than raising an exception when there is no page data, don't try
and render the pagination view at all.

--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -1,3 +1,4 @@
+<% if @page_data %>
 <div class="govuk-grid-row pagination">
   <div class="govuk-grid-column-one-half">
     <ul class="links">
@@ -30,4 +31,4 @@
     Showing <%= @page_data.record_range %> of <%= @page_data.total_elements %> results
   </div>
 </div>
-</section>
+<% end %>
