Change initial allocation action to new
Following a discussion it was agreed that we should move the initial
'allocate a POM' page under the new action, and planning that  the
following page (where the allocation actually takes place) will end up
as 'create'.  This is so that any reallocation can ultimately be an edit
action.

--- a/app/views/allocations/allocated.html.erb
+++ b/app/views/allocations/allocated.html.erb
@@ -22,16 +22,16 @@
     <tbody class="govuk-table__body">
     <% @prisoners.each do |prisoner| %>
       <tr class="govuk-table__row">
-        <td aria-label="Prisoner name" class="govuk-table__cell "><%= prisoner.surname %>, <%= prisoner.first_name %></td>
-        <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner.noms_id %></td>
+        <td aria-label="Prisoner name" class="govuk-table__cell"><%= prisoner.full_name %></td>
+        <td aria-label="Prisoner number" class="govuk-table__cell"><%= prisoner.noms_id %></td>
         <td aria-label="Arrival date" class="govuk-table__cell
               ">N/A</td>
-        <td aria-label="Release date" class="govuk-table__cell ">N/A</td>
-        <td aria-label="Tier" class="govuk-table__cell ">NA</td>
+        <td aria-label="Release date" class="govuk-table__cell">N/A</td>
+        <td aria-label="Tier" class="govuk-table__cell">NA</td>
         <td aria-label="POM" class="govuk-table__cell">NA</td>
         <td aria-label="Allocation date" class="govuk-table__cell">NA</td>
         <td aria-label="Action" class="govuk-table__cell "><a
-          href="<%= allocate_prison_offender_managers_edit_path(prisoner.noms_id) %>">Reallocate</a></td>
+          href="">Reallocate</a></td>
       </tr>
     <% end %>
     </tbody>
