--- a/app/views/allocations/missing_information.html.erb
+++ b/app/views/allocations/missing_information.html.erb
@@ -18,7 +18,7 @@
     <tbody class="govuk-table__body">
     <% @prisoners.each do |prisoner| %>
       <tr class="govuk-table__row">
-        <td aria-label="Action" class="govuk-table__cell "><%= prisoner.surname %>, <%= prisoner.first_name %></td>
+        <td aria-label="Action" class="govuk-table__cell "><%= prisoner.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner.noms_id %></td>
         <td aria-label="Arrival date" class="govuk-table__cell ">NA</td>
         <td aria-label="Release date" class="govuk-table__cell "><%= prisoner.release_date %></td>
