--- a/app/views/allocations/allocated.html.erb
+++ b/app/views/allocations/allocated.html.erb
@@ -23,10 +23,10 @@
     <% @prisoners.each do |prisoner| %>
       <tr class="govuk-table__row">
         <td aria-label="Prisoner name" class="govuk-table__cell"><%= prisoner.full_name %></td>
-        <td aria-label="Prisoner number" class="govuk-table__cell"><%= prisoner.noms_id %></td>
+        <td aria-label="Prisoner number" class="govuk-table__cell"><%= prisoner.offender_no %></td>
         <td aria-label="Arrival date" class="govuk-table__cell
               ">N/A</td>
-        <td aria-label="Release date" class="govuk-table__cell">N/A</td>
+        <td aria-label="Release date" class="govuk-table__cell"><%= string_to_date(prisoner.release_date) %></td>
         <td aria-label="Tier" class="govuk-table__cell">NA</td>
         <td aria-label="POM" class="govuk-table__cell">NA</td>
         <td aria-label="Allocation date" class="govuk-table__cell">NA</td>
