--- a/app/views/shared/_basic_prisoner_info.html.erb
+++ b/app/views/shared/_basic_prisoner_info.html.erb
@@ -12,11 +12,11 @@
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Number</td>
-      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.noms_id %></td>
+      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.offender_no %></td>
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell hmpps-table-cell__key">Nationality</td>
-        <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.nationality %></td>
+        <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.ethnicity %></td>
       </tr>
     </tbody>
   </table>
