--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -10,7 +10,7 @@
   </tr>
   <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Release date / parole eligibility</td>
-      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.release_date %></td>
+      <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Need to get from somewhere!</td>
     </tr>
   </tbody>
 </table>
