--- a/app/views/allocate_prison_offender_managers/_case_information.html.erb
+++ b/app/views/allocate_prison_offender_managers/_case_information.html.erb
@@ -17,7 +17,7 @@
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Tiering calculation</td>
     <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
-      <a href="#">Need to get from somewhere!</a></td>
+      <a href="#"><%= @prisoner.tier %></a></td>
   </tr>
   </tbody>
 </table>
