Adds main offence text to single offender view
This PR adds an API call to get the main offence for a given booking,
and then calls it in the OffenderService so that the main offence
description is available in the main prisoner allocation view.

--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -6,7 +6,7 @@
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Main Offence</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Need to get from somewhere!</td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.main_offence %></td>
   </tr>
   <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Release date / parole eligibility</td>
