Adds the case allocation field to the single offender
When using the Delius API to fetch the tier, we also fetch the case
allcoation (if any) and this PR adds it to the model and adds to the
prisoner allocation screen.

--- a/app/views/allocate_prison_offender_managers/_case_information.html.erb
+++ b/app/views/allocate_prison_offender_managers/_case_information.html.erb
@@ -11,7 +11,7 @@
 
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Case allocation</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Need to get from somewhere!
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.case_allocation %>
     </td>
   </tr>
   <tr class="govuk-table__row">
