Store release_date as a date rather than a string
Currently we store the release_date as a string, but this means we parse
it into a date in many places on every use, and will also make the
calculation of the 'Current Responsiblity' more complicated.

This PR changes the API to return a hash of offender_no=>Date rather
than offender_no=>string

--- a/app/views/allocations/awaiting.html.erb
+++ b/app/views/allocations/awaiting.html.erb
@@ -21,7 +21,7 @@
         <td aria-label="Action" class="govuk-table__cell "><%= prisoner.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner.offender_no %></td>
         <td aria-label="Arrival date" class="govuk-table__cell ">N/A</td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= string_to_date(prisoner.release_date) %></td>
+        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(prisoner.release_date) %></td>
         <td aria-label="Tier" class="govuk-table__cell "><%= prisoner.tier %></td>
         <td aria-label="Action" class="govuk-table__cell "><a href="<%= allocate_prison_offender_managers_new_path(prisoner.offender_no) %>">Allocate</a></td>
       </tr>
