--- a/app/views/allocations/allocated.html.erb
+++ b/app/views/allocations/allocated.html.erb
@@ -26,7 +26,7 @@
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= prisoner.offender_no %></td>
         <td aria-label="Arrival date" class="govuk-table__cell
               ">N/A</td>
-        <td aria-label="Release date" class="govuk-table__cell"><%= string_to_date(prisoner.release_date) %></td>
+        <td aria-label="Release date" class="govuk-table__cell"><%= format_date(prisoner.release_date) %></td>
         <td aria-label="Tier" class="govuk-table__cell"><%= prisoner.tier %></td>
         <td aria-label="POM" class="govuk-table__cell">NA</td>
         <td aria-label="Allocation date" class="govuk-table__cell">NA</td>
