--- a/app/views/allocations/missing_information.html.erb
+++ b/app/views/allocations/missing_information.html.erb
@@ -21,7 +21,7 @@
         <td aria-label="Action" class="govuk-table__cell "><%= prisoner.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner.offender_no %></td>
         <td aria-label="Arrival date" class="govuk-table__cell ">NA</td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= string_to_date(prisoner.release_date) %></td>
+        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(prisoner.release_date) %></td>
         <td aria-label="Action" class="govuk-table__cell "><a
           href="#">View</a></td>
       </tr>
