--- a/app/views/allocate_prison_offender_managers/_case_information.html.erb
+++ b/app/views/allocate_prison_offender_managers/_case_information.html.erb
@@ -6,7 +6,7 @@
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Current responsibility</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">Need to get from somewhere!</td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.current_responsibility %></td>
   </tr>
 
   <tr class="govuk-table__row">
