Remove the tier link on single offender allocate page
The tier link will eventually deep link to the tier info on the prisoner
information page (when that is finally ready) but for now it is not
necessary

--- a/app/views/allocate_prison_offender_managers/_case_information.html.erb
+++ b/app/views/allocate_prison_offender_managers/_case_information.html.erb
@@ -16,8 +16,7 @@
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Tiering calculation</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
-      <a href="#"><%= @prisoner.tier %></a></td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.tier %></td>
   </tr>
   </tbody>
 </table>
