Wire up a POM's allocations to the front end (POMs page)

--- a/app/views/poms/_poms_table.html.erb
+++ b/app/views/poms/_poms_table.html.erb
@@ -26,13 +26,13 @@
     <% @poms.each do |pom| %>
     <tr class="govuk-table__row">
       <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
-      <td aria-label="Tier A cases" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Tier B cases" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Tier C cases" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Tier D cases" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Total" class="govuk-table__cell ">N/A</td>
+      <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
+      <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
+      <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
+      <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
+      <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell">N/A</td>
-      <td aria-label="Status" class="govuk-table__cell ">N/A</td>
+      <td aria-label="Status" class="govuk-table__cell "><%= pom.status %></td>
       <td aria-label="Action" class="govuk-table__cell "><a
           href="<%= poms_show_path(id: 1) %>">View</a></td>
     </tr>
