--- a/app/views/allocate/_pom_tables.html.erb
+++ b/app/views/allocate/_pom_tables.html.erb
@@ -20,8 +20,8 @@ Recommendation: <%= @recommended_pom %> POMs
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-  <% @recommended_poms.each do |pom| %>
-    <tr class="govuk-table__row">
+  <% @recommended_poms.each_with_index do |pom, i| %>
+    <tr class="govuk-table__row recommended_pom_row_<%= i %>">
       <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
       <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
       <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
@@ -75,8 +75,8 @@ Recommendation: <%= @recommended_pom %> POMs
         </tr>
       </thead>
       <tbody class="govuk-table__body">
-        <% @not_recommended_poms.each do |pom| %>
-          <tr class="govuk-table__row">
+        <% @not_recommended_poms.each_with_index do |pom, i| %>
+          <tr class="govuk-table__row not_recommended_pom_row_<%= i %>">
             <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
             <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
             <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
