Update service and views re: overrides
Now we have the ability to override the recommended POM we have updated
the views and service to connect this feature

--- a/app/views/allocate/_pom_tables.html.erb
+++ b/app/views/allocate/_pom_tables.html.erb
@@ -87,7 +87,8 @@ Recommendation: <%= @recommended_pom %> POMs
             <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
             <% if current_page?(action: 'show') %>
               <td aria-label="Action" class="govuk-table__cell table_cell__left_align"><a
-                href="#">Allocate</a></td>
+                <%= link_to "Allocate", overrides_new_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %></a>
+              </td>
             <% else %>
               <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
                 href="#">Reallocate</a></td>
