Fix broken paths

--- a/app/views/allocates/show.html.erb
+++ b/app/views/allocates/show.html.erb
@@ -6,8 +6,8 @@
 
 <%= render 'shared/offence_info' %>
 
-<%= render 'allocate/case_information' %>
+<%= render 'allocates/case_information' %>
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible"></hr>
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible" />
 
-<%= render 'allocate/pom_tables' %>
+<%= render 'allocates/pom_tables' %>
