--- a/app/views/allocations/_allocated.html.erb
+++ b/app/views/allocations/_allocated.html.erb
@@ -17,7 +17,7 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @offenders_allocated.each_with_index do |offender, i| %>
+    <% @summary.allocated_offenders.each_with_index do |offender, i| %>
       <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell"><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
@@ -33,6 +33,4 @@
     <% end %>
     </tbody>
   </table>
-
-  <%= render '/shared/pagination' %>
 </section>
