--- a/app/views/allocations/index.html.erb
+++ b/app/views/allocations/index.html.erb
@@ -7,17 +7,17 @@
   <ul class="govuk-tabs__list" role='tablist'>
       <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab" href="#allocated">
-          Allocated (N)
+          Allocated (<%= @summary.allocated_total %>)
       </a>
       </li>
       <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab" href="#awaiting-allocation">
-          Awaiting allocation (N)
+          Awaiting allocation (<%= @summary.unallocated_total %>)
       </a>
       </li>
       <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab" href="#awaiting-tiering">
-          Awaiting tiering (N)
+          Awaiting tiering (<%= @summary.missing_info_total %>)
       </a>
       </li>
   </ul>
